--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^latest
+  http: ^1.2.2
   shared_preferences: ^2.2.2
-  intl: ^0.19.0
+  intl: ^0.20.2
 
   # Firebase
-  firebase_core: ^latest
-  firebase_messaging: ^latest
-    package_info_plus: ^latest
+  firebase_core: ^4.3.0
+  firebase_messaging: ^16.1.0
+  package_info_plus: ^9.0.0
   firebase_auth: ^6.1.2
   firebase_analytics: ^12.0.4
   firebase_crashlytics: ^5.0.5
@@ -34,7 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.1
   image: ^4.0.20
 
